--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,8 +3,29 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #F2B8C6;
+  background-color: #F2B8C6;
 }
 
+header {
+  background-color: #ADD8E6;
+  padding: 20px;
+}
+
+.contact {
+  font-family: 'Kanit', sans-serif;
+}
+
+.nav1 {
+  background-color: #CBC3E3;
+  float: center;
+  padding: 10px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  font size: 1rem;
+  max-width: 100%;
+  min-width: 30%;
+}
 
 p {
   font-size: 18px;
@@ -19,13 +40,14 @@ h2 {
   color: #333;
   text-align: center;
   margin-top: 20px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 
 a {
-  text-decoration: none;
-  list-style: none;
-  color: #333;
+  text-decoration: inherit;
+  list-style: inherit;
+  color: #whitesmoke;
 }
 
 
@@ -38,36 +60,43 @@ ul {
 
 img {
   border: none;
+  display: flex;
+  justify-content: center;
+  width:250px;height:370px
 }
 
 
-body {
-  background-color: #f2f2f2;
+.maintext {
+  display: flex;
+    justify-content: center; 
+      align-items: center;
+      flex-direction: column; 
+        background: #DEDEDE;
+        border-radius: 1em;
+        padding: 1em;
+        max-width: 800px;
 }
 
-header {
-  background-color: #fff;
-  padding: 20px;
+.joke {
+  font-family: 'PT Serif', serif;
+  width: 80%;
+  background-color: lightpink;
 }
 
-nav {
-  background-color: #eee;
-  padding: 10px;
+.jokepunchline {
+  font-family: 'PT Serif Italic', serif;
+  background-color: lightpink;
 }
 
-main {
-  background-color: #fff;
-  padding: 20px;
+.songlist {
+  font-family: font-family: 'Merriweather', serif;
+  text-align: center;
 }
 
 footer {
-  background-color: #eee;
+  background-color: powderblue;
   padding: 10px;
 }
 
-/* Use Google font */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-body {
-  font-family: 'Roboto', Helvetica, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&family=Merriweather:ital@1&family=PT+Serif:ital,wght@0,700;1,700&family=Ubuntu:wght@300&display=swap');
