--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -100,6 +100,43 @@ img {
   width:250px;height:370px
 }
 
+.gallery-image {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  margin: 1rem auto;
+  width: 100%;
+  max-width: 700px;
+}
+
+.gallery-image img {
+  width: 100%;
+}
+
+.button_holder {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+button {
+  min-width: 5rem;
+
+}
+
+figcaption {
+  margin: 0.5rem;
+}
+
+.hideThis {
+  display: none;
+}
+
+.headlineback {
+  background-image: url("");
+
 /*Footer section*/
 footer {
   background: #d3d3d3;
