--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,7 +24,7 @@ font-size: 20px;
 
 body {
   margin: 0px;
-  background-color: #E3AD16;
+  background-color: #FDA4BA;
   font-family: 'Cormorant Garamond', serif;
 }
 
@@ -41,7 +41,7 @@ main {
 /*beginning updated nav and ul, ol*/
 nav {
   color: #E3AD16;
-  background-color: #000000;
+  background-color: #BE93D4;
   padding: 0;
   display: block;
   margin: 0;
