--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -164,8 +164,13 @@ address {
   max-width: 700px;
 }
 
-.gallery-image img {
-  width: 100%;
+.gallery-image1 {
+  width:250px;height:370px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  margin: 4rem auto;
 }
 
 .button_holder {
