--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -29,7 +29,10 @@ body {
 }
 
 .homepage {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
