--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -167,13 +167,8 @@ address {
   max-width: 700px;
 }
 
-.gallery-image1 {
-  width:250px;height:370px;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  margin: 4rem auto;
+.gallery-image img {
+  width: 100%;
 }
 
 .button_holder {
