--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -168,7 +168,9 @@ address {
 }
 
 .gallery-image img {
-  width: 100%;
+  /*width: 100%;*/
+  height: 500px;
+  max-width: 700px;
 }
 
 .button_holder {
