--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -162,7 +162,7 @@ address {
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
-  margin: 4rem auto;
+  margin: auto;
   width: 100%;
   max-width: 700px;
 }
