--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -168,7 +168,9 @@ address {
 }
 
 .gallery-image img {
-  width: 100%;
+  /*width: 100%*/;
+  max-width: 700px;
+  max-height: 500px
 }
 
 .button_holder {
