--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -162,7 +162,7 @@ address {
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
-  margin: 1rem auto;
+  margin: auto;
   max-width: 700px;
 }
 
@@ -170,6 +170,7 @@ address {
   /*width: 100%*/;
   max-width: 700px;
   max-height: 500px;
+  margin: auto;
 }
 
 .button_holder {
