--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -169,7 +169,7 @@ address {
 .gallery-image img {
   /*width: 100%*/;
   max-width: 700px;
-  max-height: 500px;
+  height: 500px;
   margin: auto;
 }
 
