--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -158,16 +158,17 @@ address {
 /*figure and .gallery-image styles*/
 
 .gallery-image {
+  display: block;
   margin-block-start: 0;
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
   margin: auto;
+  width: 100%;
   max-width: 700px;
 }
 
 .gallery-image img {
-  /*width: 100%*/;
   max-width: 700px;
   height: 500px;
   margin: auto;
